fix clean source
