# internal/adapters/primary/http/dto/response/error_response.go
@@ -1,0 +1,11 @@
+package response
+
+// ErrorResponse represents an error response
+// @Description Error response structure
+type ErrorResponse struct {
+	StatusCode int    `json:"status_code"`
+	Type       string `json:"type"`
+	RequestID  string `json:"request_id"`
+	Message    string `json:"message"`
+	Details    any    `json:"details,omitempty"`
+}
